Q-Learning algorithm implementation cleanup

--- a/lab_1_intro_rl.ipynb
+++ b/lab_1_intro_rl.ipynb
@@ -743,7 +743,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def learn(state, action, reward, next_state, next_action):\n",
+    "def q_learn(state, action, reward, next_state):\n",
     "    \"\"\"\n",
     "    Performs a SARSA update for a given state transition\n",
     "    \"\"\"\n",
@@ -792,11 +792,11 @@
     "            episode_reward += reward\n",
     "\n",
     "            if not done and t < 2000:  # if the algorithm does not converge, it stops after 2000 timesteps\n",
-    "                learn(state, action, reward, next_state, None)\n",
+    "                q_learn(state, action, reward, next_state)\n",
     "                state = next_state\n",
     "            else:\n",
     "                done = True  # done is ensured to be True (in the case the algorithm did not reach convergence)\n",
-    "                learn(state, action, reward, next_state, None)\n",
+    "                q_learn(state, action, reward, next_state)\n",
     "                timesteps_of_episode = np.append(timesteps_of_episode, [int(t + 1)])\n",
     "                reward_of_episode = np.append(reward_of_episode, max(episode_reward, -100))\n",
     "\n",
